设备分配由管理员手动改为自动
